--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,7 @@
 site_name: MCLMC
 
 
-site_url: https://app.netlify.com/sites/silver-empanada-b6dc0f/
+site_url: https://zesty-daffodil-572c7d.netlify.app/
 
 repo_url: https://github.com/reubenharry/mclmc-docs
 
