--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -128,6 +128,7 @@ nav:
     - Tuning: tuning.md
     - Differential Geometry: diffgeo.md
     - Ensemble algorithm: ensemble.md
+    - Low-Dimensional Case: low_d.md
   - Applications: applications.md
   - Supplementary material:
     - Index: supplementary.md
