--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -127,7 +127,7 @@ nav:
     - Basics: tutorial.md
     - Choice of Integrator: choice_of_integrator.md
     - Implementation: implementation.md
-    # - Tuning: tuning.md
+    - Tuning: tuning.md
     - ODE on a manifold: diffgeo.md
     - SDE on a manifold: sde.md
     # - Ensemble algorithm: ensemble.md
