--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -130,6 +130,7 @@ nav:
     - Tuning: tuning.md
     - ODE on a manifold: diffgeo.md
     - SDE on a manifold: sde.md
+    # - Metropolis Hastings + MCLMC: mhmchmc.md
     # - Ensemble algorithm: ensemble.md
     # - Sequential Monte Carlo: mclmcsmc.md
     # - Geometry: geometricintuition.md
